# fgs

./: C.g4  CLexer.g4  CMakeLists.txt  CParser.g4  main.cpp
ast/: node.hpp
ast/constants/character/: characterConstant.cpp  characterConstant.hpp  characterConstantType.hpp  characterOffset.hpp  utility.hpp
ast/constants/floating/: floatingConstant.cpp  floatingConstant.hpp  floatingConstantType.hpp  floatingOffset.hpp
ast/constants/integer/: integerConstant.cpp  integerConstant.hpp  integerConstantType.hpp  integerOffset.hpp
ast/expressions/: constant.hpp  identifier.hpp  operator.hpp  primary_expression.hpp  string_literal.hpp
ast/literals/string/: stringLiteral.cpp  stringLiteral.hpp
ast/types/: storage_class.hpp  type.hpp
codegen/: codegenState.cpp  codegenState.hpp
common/: character.cpp  character.hpp  floating.cpp  floating.hpp  integer.cpp  integer.hpp
parser/: CParseVisitor.cpp
src/: state.hpp  visitor.hpp
src/ast/: astNode.hpp
src/ast/constants/: characterConstant.hpp  constants.hpp  enumerationConstant.hpp  floatingConstant.hpp  integerConstant.hpp  stringConstant.hpp
src/types/: integer.hpp  type.hpp
